fixed hiding of collapsed navbar on page title click

--- a/src/documents/styles/main.css.less
+++ b/src/documents/styles/main.css.less
@@ -62,7 +62,7 @@ section .container{
 
 #home .intro{
   border-bottom: 5px solid @gray-light;
-  height: 1000px;
+  min-height: 1000px;
   background: url('../images/home.jpg') top center no-repeat;
   text-align: right;
 }
